--- a/#src/index.html
+++ b/#src/index.html
@@ -4,17 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="fonts/stylesheet.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Healthy Food Restaurant</title>
 </head>
 
 <body>
     <header class="header">
-        <div class="logo">YOUR LOGO</div>
-        <div class="navigation">
-            <a href="" class="nav__link">Home</a>
-            <a href="" class="nav__link">Our Menu</a>
-            <a href="" class="nav__link">Promo</a>
-            <a href="" class="nav__link">Order</a>
+        <div class="container">
+            <div class="header__menu">
+                <div class="logo">YOUR LOGO</div>
+                <div class="navigation">
+                    <a href="" class="nav__link">Home</a>
+                    <a href="" class="nav__link">Our Menu</a>
+                    <a href="" class="nav__link">Promo</a>
+                    <a href="" class="nav__link">Order</a>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -65,7 +71,6 @@
         <section class="discount">
             <div class="content-first">
                 <div class="photo">
-                    <img class="content__image" src="" alt="">
                 </div>
                 <div class="information">
                     <div class="text-area">
@@ -90,7 +95,6 @@
                     <button class="button discount__button">READ MORE</button>
                 </div>
                 <div class="photo">
-                    <img class="content__image" src="" alt="">
                 </div>
             </div>
         </section>
@@ -145,13 +149,10 @@
                 </div>
                 <div class="socials">
                     <div class="icon">
-                        <img src="" alt="facebook">
                     </div>
                     <div class="icon">
-                        <img src="" alt="twitter">
                     </div>
                     <div class="icon">
-                        <img src="" alt="instagram">
                     </div>
                 </div>
             </div>
@@ -204,6 +205,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.min.js"></script>
 </body>
 
 </html>
