--- a/#src/index.html
+++ b/#src/index.html
@@ -24,18 +24,22 @@
         </div>
     </header>
     <main>
-        <section class="intro">
+        <section class="intro background--blue">
             <div class="container">
                 <div class="text-area">
-                    <h1 class="title intro__title">Healthy Food Restaurant</h1>
+                    <h1 class="title intro__title">Healthy Food <br> Restaurant</h1>
                     <p class="description intro__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                     </p>
                 </div>
             </div>
         </section>
         <sectino class="menu">
+            <div class="background--orange"></div>
+
             <div class="container">
-                <h1 class="title title__intro">Popular Menu</h1>
+                <div class="text-area">
+                    <h1 class="title title__intro">Popular Menu</h1>
+                </div>
                 <div class="cards">
                     <div class="card__item">
                         <div class="card__image"></div>
