--- a/#src/index.html
+++ b/#src/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="intro background--blue">
             <div class="container">
-                <div class="text-area">
+                <div class="text-area intro__text-area">
                     <h1 class="title intro__title">Healthy Food <br> Restaurant</h1>
                     <p class="description intro__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                     </p>
@@ -37,40 +37,51 @@
             <div class="background--orange"></div>
 
             <div class="container">
-                <div class="text-area">
-                    <h1 class="title title__intro">Popular Menu</h1>
+                <div class="menu__content">
+                    <h1 class="title menu__title">Popular Menu</h1>
+                    <div class="cards">
+                        <div class="card__item">
+                            <div class="card__photo">
+                                <img class="card__image" src="img/menu/first.jpg" alt="">
+                            </div>
+                            <div class="text-area menu__text-area">
+                                <div class="container">
+                                    <h4 class="title card__title">Noodles</h4>
+                                    <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
+                                        adipiscing elit.</p>
+                                    <h4 class="price">$13</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card__item">
+                            <div class="card__photo">
+                                <img class="card__image" src="img/menu/second.jpg" alt="">
+                            </div>
+                            <div class="text-area menu__text-area">
+                                <div class="container">
+                                    <h4 class="title card__title">Noodles</h4>
+                                    <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
+                                        adipiscing elit.</p>
+                                    <h4 class="price">$9</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card__item">
+                            <div class="card__photo">
+                                <img class="card__image" src="img/menu/third.jpg" alt="">
+                            </div>
+                            <div class="text-area menu__text-area">
+                                <div class="container">
+                                    <h4 class="title card__title">Noodles</h4>
+                                    <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
+                                        adipiscing elit.</p>
+                                    <h4 class="price">$21</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="button menu__button">SHOW MORE</button>
                 </div>
-                <div class="cards">
-                    <div class="card__item">
-                        <div class="card__image"></div>
-                        <div class="text-area">
-                            <h4 class="title card__title">Noodles</h4>
-                            <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
-                                adipiscing elit.</p>
-                            <span class="price">$13</span>
-                        </div>
-                    </div>
-                    <div class="card__item">
-                        <div class="card__image"></div>
-                        <div class="text-area">
-                            <h4 class="title card__title">Noodles</h4>
-                            <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
-                                adipiscing elit.</p>
-                            <span class="price">$9</span>
-                        </div>
-                    </div>
-                    <div class="card__item">
-                        <div class="card__image"></div>
-                        <div class="text-area">
-                            <h4 class="title card__title">Noodles</h4>
-                            <p class="description card__description">Lorem ipsum dolor sit amet, consectetuer
-                                adipiscing elit.</p>
-                            <span class="price">$21</span>
-                        </div>
-                    </div>
-                </div>
-                <button class="button menu__button">SHOW MORE</button>
-            </div>
         </sectino>
         <section class="discount">
             <div class="content-first">
